--- a/src/styles.css
+++ b/src/styles.css
@@ -1,4 +1,4 @@
-body{
+body {
     min-height: 100vh;
     display: grid;
     grid-template-rows: auto 1fr auto;
@@ -6,7 +6,8 @@ body{
     background-position: center;
     background-repeat: no-repeat;
 }
-.header{
+
+.header {
     padding: 20px;
     display: flex;
     justify-content: center;
@@ -16,16 +17,19 @@ body{
     background-color: var(--colorBackgroundBlur);
     backdrop-filter: blur(10px);
 }
-.logo{
+
+.logo {
     font-family: 'Lobster', cursive;
     font-size: calc(3rem + 1vw);
     color: var(--colorWhite);
 }
-.nav{
+
+.nav {
     display: flex;
     gap: 20px;
 }
-.nav__item{
+
+.nav__item {
     padding: 10px 20px;
     border-radius: 10px;
     border: none;
@@ -34,7 +38,8 @@ body{
     color: var(--colorBlack);
     background-color: var(--colorYalow);
 }
-.footer{
+
+.footer {
     display: flex;
     justify-content: center;
     align-items:center;
@@ -44,8 +49,7 @@ body{
     color: var(--colorWhite);
 }
 
-/* Home */
-.main-content{
+.main__content {
     height: 100%;
     width: 100%;
     display: flex;
@@ -53,11 +57,13 @@ body{
     align-items: center;
     gap: 20px;
 }
-.home__img{
+.imgHome{
     width: 400px;
     height: 400px;
+    border-radius: 10px;
 }
-.menu__container{
+
+.menu__container {
     height: 80%;
     width: 50%;
     display: grid;
@@ -65,7 +71,8 @@ body{
     grid-template-rows: 1fr 1fr;
     gap: 20px;
 }
-.pizza__card{
+
+.pizza__card {
     padding: 10px;
     display: flex;
     flex-direction: column;
@@ -75,8 +82,10 @@ body{
     background-color: var(--colorBackgroundBlur);
     backdrop-filter: blur(10px);
     color: var(--colorWhite);
+    border-radius: 10px;
 }
-.about{
+
+.about {
     width: 50%;
     padding: 20px;
     display: flex;
@@ -85,4 +94,5 @@ body{
     background-color: var(--colorBackgroundBlur);
     backdrop-filter: blur(10px);
     color: var(--colorWhite);
+    border-radius: 10px;
 }
